--- a/zad 2/Evaluation Manager/Evaluation Manager.csproj
+++ b/zad 2/Evaluation Manager/Evaluation Manager.csproj
@@ -68,7 +68,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\StudentRepository.cs" />
-    <Compile Include="Repositories\TeacherRepository.cs" />
+    <Compile Include="TeacherRepository.cs" />
     <EmbeddedResource Include="FrmLogin.resx">
       <DependentUpon>FrmLogin.cs</DependentUpon>
     </EmbeddedResource>
